WP-93 fix scrolling issues on mobile

--- a/css/admin.less
+++ b/css/admin.less
@@ -1,9 +1,8 @@
-html {
+html, body {
   height: 100%;
+  overflow: auto;
 }
-body {
-  height: 100%;
-}
+
 body.wait {
   cursor: wait !important;
   * {
@@ -97,6 +96,7 @@ ul#kaltura-browse {
   list-style: none;
   padding: 0 0 0 5px;
   width: 72%;
+  overflow: auto;
   li {
     background: url("../images/entries_bg.png") center 0 no-repeat;
     float: left;
